# intelligent-email-assistant

./: .dockerignore  .gitattributes  .gitignore  AI_SUMMARIZATION_FIX_REPORT.md  CRITICAL_FIXES_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_CONTRACT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_LOCK.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FINAL_FIX.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINAL_VALIDATION_REPORT.md  GITHUB_DEPLOYMENT_GUIDE.md  OAUTH_CONFIGURATION.md  PACKAGE_RESTRUCTURE_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  Procfile  QUICK_RESUME.md  README.md  README_DEPLOYMENT.md  RUNBOOK.md  SECURITY_FIX_DEPLOYMENT.md  SECURITY_HISTORY_REWRITE.sh  SECURITY_SETUP.md  SERVICE_PY_HYGIENE_BASELINE.md  SESSION_CHECKPOINT.md  TIMESTAMP_FIX_FINAL_DEPLOYMENT.md  database_verification.sql  deploy.sh  pyproject.toml  render.yaml  requirements.txt  run_worker_local.bat  run_worker_local.sh  timestamp_debug_queries.sql
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README_backend.md  align_secrets.py  api.py  api_old.py  auth_guard.py  auth_url.txt  check_paths.py  config.py  core.py  docker-compose.yml  document_processor.py  email_classifier.py  fetch_report.json  final_auth_url.txt  generate_final_url.py  generate_secrets.py  generate_url.py  languages.py  launch.bat  main.py  prompt_builder.py  python_path.txt  requirements.txt  robust_handshake.py  setup.py  simulate_endpoint.txt  site_path.txt  start_backend.bat  start_backend.sh  summary_versions.py  test_phase1_pipeline.py  test_phase2.py  tones.py
backend/api/: gmail_client.py  health.py  models.py  oauth_manager.py  service.py
backend/assistant/: agent.py  approval_gate.py
backend/auth/: __init__.py  credential_store.py  jwt_service.py  token_manager.py
backend/data/: models.py  store.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  start_frontend.sh  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
scripts/: check-env.sh  fix_oauth_port.bat  fix_oauth_port.sh  generate-types.ps1  generate-types.sh  health-check.sh  smoke_imports.ps1  start-all.sh  stop-all.sh
shared/: README.md
src/: main.py
(+220 files in other folders)
